# Projekt-2

./: .gitignore  CMakeLists.txt  klassediagram.plantuml
Forms/: mainwindow.ui
Headers/: IKSimulator.h  mainwindow.h  objectdetector.h  predictionvisualizer.h  videoplayer.h
Sources/: IKSimulator.cpp  main.cpp  mainwindow.cpp  objectdetector.cpp  predictionvisualizer.cpp  videoplayer.cpp
cmake/: CPM.cmake
notebooks/: Train.ipynb
src/: main.cpp  objectdetector.cpp
